# Lidar-map-visualisator

./: .gitignore  Cargo.toml  README.md
assets/: ascii.pcd
python_pcd/: DepthCamera_2025-09-19-13-47-35.json  main.py  pyproject.toml
src/: lib.rs  main.rs  main_file_splitter.rs  point_reader.rs  point_writer.rs  util.rs
